--- a/src/index.ejs
+++ b/src/index.ejs
@@ -22,6 +22,11 @@
 			width: 100%;
 			height: 100%;
 		}
+
+		#pixi-canvas {
+			width: auto !important;
+			height: 100% !important;
+		}
 	</style>
 
 </head>
